--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "schema": "db/schema.prisma"
   },
   "prettier": {
-    "semi": false,
+    "singleQuote": true,
+    "semi": true,
     "printWidth": 100
   },
   "dependencies": {
@@ -37,7 +38,7 @@
     "@types/react": "18.0.25",
     "@vitejs/plugin-react": "2.2.0",
     "jsdom": "20.0.3",
-    "prettier": "^2.7.1",
+    "prettier": "^3.0.1",
     "prettier-plugin-prisma": "4.4.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.7",
