--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mantine/next": "^6.0.19",
     "@prisma/client": "4.6.1",
     "blitz": "2.0.0-beta.31",
+    "mantine-layout-components": "^0.1.2",
     "next": "13.4.9",
     "prisma": "4.6.1",
     "react": "18.2.0",
