--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mantine/form": "^6.0.20",
     "@mantine/hooks": "^6.0.19",
     "@mantine/next": "^6.0.19",
+    "@mantine/notifications": "^6.0.20",
     "@prisma/client": "4.6.1",
     "blitz": "2.0.0-beta.31",
     "mantine-layout-components": "^0.1.2",
