--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "blitz dev",
     "build": "blitz build",
     "start": "blitz start",
-    "studio": "blitz prisma studio"
+    "studio": "BROWSER=none blitz prisma studio"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jest": "^29.5.11",
     "@types/node": "18.11.9",
     "@types/preview-email": "2.0.1",
     "@types/react": "18.0.25",
@@ -52,7 +54,8 @@
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.7",
     "typescript": "^4.8.4",
-    "vite-tsconfig-paths": "3.6.0"
+    "vite-tsconfig-paths": "3.6.0",
+    "vitest": "^1.2.0"
   },
   "private": true
 }
