--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "~/*": ["./*"]
     },
+    "types": ["jest", "node"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
