--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "blitz dev",
     "build": "blitz build",
     "start": "blitz start",
-    "studio": "BROWSER=none blitz prisma studio"
+    "db:migrate": "blitz prisma migrate dev",
+    "db:studio": "BROWSER=none blitz prisma studio"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -29,11 +30,11 @@
     "@mantine/hooks": "^6.0.19",
     "@mantine/next": "^6.0.19",
     "@mantine/notifications": "^6.0.20",
-    "@prisma/client": "4.6.1",
+    "@prisma/client": "^5.10.0",
     "blitz": "2.0.0-beta.31",
     "mantine-layout-components": "^0.1.2",
     "next": "13.4.9",
-    "prisma": "4.6.1",
+    "prisma": "^5.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
