--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "blitz dev",
-    "build": "blitz prisma migrate deploy && blitz prisma generate && blitz build",
+    "build": "sleep 3 && blitz prisma migrate deploy && blitz prisma generate && blitz build",
     "start": "blitz start",
     "db:migrate": "blitz prisma migrate dev",
     "db:studio": "BROWSER=none blitz prisma studio"
