--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "@types/react": "18.0.25",
     "@vitejs/plugin-react": "2.2.0",
     "jsdom": "20.0.3",
+    "postcss": "^8.4.41",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.1",
     "prettier-plugin-prisma": "4.4.0",
     "pretty-quick": "3.1.3",
