--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mantine/notifications": "^6.0.20",
     "@prisma/client": "^5.10.0",
     "blitz": "2.0.0-beta.31",
+    "date-fns": "^3.6.0",
     "mantine-layout-components": "^0.1.2",
     "next": "13.4.9",
     "prisma": "^5.10.0",
@@ -40,7 +41,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
     "secure-password": "4.0.0",
-    "zod": "3.20.2"
+    "zod": "3.20.2",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
